--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
             <br> IEEE International Conference on Computer Vision (ICCV) Workshops, 2019.
             <br>
             [<a href="https://arxiv.org/abs/1810.04511">arXiv</a>]
-            [<a href="http://openaccess.thecvf.com/content_ICCVW_2019/html/HVU/Meng_Interpretable_Spatio-Temporal_Attention_for_Video_Action_Recognition_ICCVW_2019_paper.html">Proceedings</a>]
+            [<a href="https://doi.org/10.1109/ICCVW.2019.00189">Proceedings</a>]
             [<a data-toggle="collapse" href="#meng2018interpretable">BibTeX</a>]
             <p />
             <div class="collapse" id="meng2018interpretable">
