--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="UBC, statistics, machine learning, deep learning, neural networks, research" />
   <meta name="description" content="I'm a machine learning researcher at Borealis AI, based in Toronto, Canada." />
-  <link rel="shortcut icon" href="https://cdn.ubc.ca/clf/7.0.4/img/favicon.ico">
+  <link rel="icon" type="image/png" href="dice-16x16.png" sizes="16x16">
+  <link rel="icon" type="image/png" href="dice-32x32.png" sizes="32x32">  
   <title>Bo Chang</title>
   <br>
   <!-- Latest compiled and minified CSS -->
