Add structured data

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="UBC, statistics, machine learning, deep learning, neural networks, research" />
   <meta name="description" content="I'm a machine learning researcher at Borealis AI, based in Toronto, Canada." />
   <link rel="icon" type="image/png" href="dice-16x16.png" sizes="16x16">
-  <link rel="icon" type="image/png" href="dice-32x32.png" sizes="32x32">  
+  <link rel="icon" type="image/png" href="dice-32x32.png" sizes="32x32">
   <title>Bo Chang</title>
   <br>
   <!-- Latest compiled and minified CSS -->
@@ -22,7 +22,39 @@
         font-size: 14px;
         overflow-y: scroll;
     }
-    </style>
+  </style>
+  <script type="application/ld+json">
+  {
+    "@context": "http://www.schema.org",
+    "@type": "Person",
+    "name": "Bo Chang",
+    "gender": "Male",
+    "url": "https://bochang.me",
+    "email": "mailto:contact@bochang.me",
+    "image": "https://bochang.me/pic.jpg",
+    "alumniOf": [{
+        "@type": "CollegeOrUniversity",
+        "name": "University of British Columbia",
+        "url": "https://www.ubc.ca"
+      },
+      {
+        "@type": "CollegeOrUniversity",
+        "name": "University of California, Los Angeles",
+        "url": "https://www.ucla.edu"
+      },
+      {
+        "@type": "CollegeOrUniversity",
+        "name": "Peking University"
+      }
+    ],
+    "sameAs": [
+      "https://twitter.com/__bochang__",
+      "https://scholar.google.com/citations?user=s9F-vo0AAAAJ",
+      "https://ca.linkedin.com/in/booochang",
+      "https://orcid.org/0000-0001-7429-7212"
+    ]
+  }
+  </script>
 </head>
 
 <body>
@@ -80,9 +112,9 @@
             <br>
             <a href="https://scholar.google.com/citations?user=JlmzaGsAAAAJ">Ruizhi&nbsp;Deng</a>,
             <a href="#">Bo&nbsp;Chang</a>,
-            <a href="https://scholar.google.com/citations?user=x2wyjkAAAAAJ">Marcus&nbsp;A.&nbsp;Brubaker</a>,            
+            <a href="https://scholar.google.com/citations?user=x2wyjkAAAAAJ">Marcus&nbsp;A.&nbsp;Brubaker</a>,
             <a href="https://scholar.google.com/citations?user=Bl9FSL0AAAAJ">Greg&nbsp;Mori</a>,
-            <a href="https://scholar.google.com/citations?user=DM49PecAAAAJ">Andreas&nbsp;Lehrmann</a>            
+            <a href="https://scholar.google.com/citations?user=DM49PecAAAAJ">Andreas&nbsp;Lehrmann</a>
             <br> Preprint, 2020.
             <br>
             [<a href="https://arxiv.org/abs/2002.10516">arXiv</a>]
@@ -104,7 +136,7 @@
             <b>Variational Hyper RNN for Sequence Modeling </b>
             <br>
             <a href="https://scholar.google.com/citations?user=JlmzaGsAAAAJ">Ruizhi&nbsp;Deng</a>,
-            <a href="https://scholar.google.com/citations?user=RTVRTSsAAAAJ">Yanshuai&nbsp;Cao</a>,            
+            <a href="https://scholar.google.com/citations?user=RTVRTSsAAAAJ">Yanshuai&nbsp;Cao</a>,
             <a href="#">Bo&nbsp;Chang</a>,
             <a href="https://scholar.google.com/citations?user=P2mG6rcAAAAJ">Leonid&nbsp;Sigal</a>,
             <a href="https://scholar.google.com/citations?user=Bl9FSL0AAAAJ">Greg&nbsp;Mori</a>,
@@ -520,7 +552,6 @@
         <footer>* Equal Contribution</footer>
         <br>
         <a href="https://scholar.google.com/citations?user=s9F-vo0AAAAJ"><img src="https://scholar.google.com/intl/en/scholar/images/1x/scholar_logo_64dp.png" class="img-responsive" width="25%"></a>
-        <div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0001-7429-7212" href="https://orcid.org/0000-0001-7429-7212" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">orcid.org/0000-0001-7429-7212</a></div>
       </div>
       <div class="tab-pane fade" id="blog">
         <h3>Posts</h3>
@@ -529,7 +560,7 @@
             <a href="https://bochang.me/blog/posts/measure-val-grad/">Measure-Valued Gradient Estimator and Application to Variational Autoencoder</a>
             <br> March 7, 2020
             <p />
-          </li>          
+          </li>
           <li>
             <a href="https://bochang.me/blog/posts/pytorch-distributions/">Understanding Shapes in PyTorch Distributions Package</a>
             <br> October 20, 2019
