--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                 <br>&nbsp; title = {Copula diagnostics for asymmetries and conditional dependence},
                 <br>&nbsp; author={Chang, Bo and Joe, Harry},
                 <br>&nbsp; journal = {Journal of Applied Statistics},
-                <br>&nbsp; year={2019}.
+                <br>&nbsp; year={2019}
                 <br>}
               </code>
             </div>
@@ -456,18 +456,21 @@
             <a href="https://scholar.google.com/citations?user=y6E9TycAAAAJ">Roger&nbsp;M.&nbsp;Cooke</a>,
             <a href="https://scholar.google.com/citations?user=yRSzNv0AAAAJ">Harry&nbsp;Joe</a>,
             <a href="#">Bo&nbsp;Chang</a>
-            <br> AStA Advances in Statistical Analysis, to appear.
+            <br> AStA Advances in Statistical Analysis 104: 141&ndash;167, 2020.
             <br>
             [<a href="https://doi.org/10.1007/s10182-019-00353-5">Journal</a>]
-            [<a data-toggle="collapse" href="#cooke2019vine">BibTeX</a>]
+            [<a data-toggle="collapse" href="#cooke2020vine">BibTeX</a>]
             <p />
-            <div class="collapse" id="cooke2019vine">
+            <div class="collapse" id="cooke2020vine">
               <code>
-                @article{cooke2019vine,
+                @article{cooke2020vine,
                 <br>&nbsp; title={Vine copula regression for observational studies},
                 <br>&nbsp; author={Cooke, Roger M and Joe, Harry and Chang, Bo},
                 <br>&nbsp; journal={AStA Advances in Statistical Analysis},
-                <br>&nbsp; year={2019}.
+                <br>&nbsp; volume={104},
+                <br>&nbsp; pages={141--167},                
+                <br>&nbsp; year={2020},
+                <br>&nbsp; publisher={Springer}
                 <br>}
               </code>
             </div>
