--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
     "@type": "Person",
     "name": "Bo Chang",
     "gender": "Male",
+    "Description": "Bo Chang is a software engineer at Google Brain.",
+    "jobTitle": "Software Engineer",
+    "worksFor": [{
+      "@type": "Organization",
+      "name": "Google"
+    }],    
     "url": "https://bochang.me",
     "email": "mailto:contact@bochang.me",
     "image": "https://bochang.me/pic.jpg",
@@ -75,7 +81,10 @@
           <tr>
             <td width="40%"><img src="pic.jpg" class="img-responsive" width="90%"></td>
             <td>
-              I'm a machine learning researcher at <a href="https://www.borealisai.com/en/">Borealis AI</a>, based in Toronto, Canada. Prior to that, I did my Ph.D. at the <a href="https://www.ubc.ca/">University of British Columbia</a>, where my advisor was <a href="https://scholar.google.com/citations?user=yRSzNv0AAAAJ">Professor Harry Joe</a>.
+              I am a software engineer at <a href="https://ai.google/brain-team/">Google Brain</a>, based in Toronto, Canada.
+              Prior to that, I was a machine learning researcher at
+              <a href="https://www.borealisai.com/en/">Borealis AI</a>. 
+              I finished my Ph.D. in statistics at the <a href="https://www.ubc.ca/">University of British Columbia</a>.
               <p />
               <address>
                 Email:
@@ -97,7 +106,8 @@
         </ul>
         <h3>Employment</h3>
         <ul>
-          <li><a href="https://www.borealisai.com/en/">Borealis AI</a>, Machine Learning Researcher, 2019&ndash;Now</li>
+          <li><a href="https://ai.google/brain-team/">Google Brain</a>, Software Engineer, 2020&ndash;Now</li>          
+          <li><a href="https://www.borealisai.com/en/">Borealis AI</a>, Machine Learning Researcher, 2019&ndash;2020</li>
           <li><a href="https://ai.google/brain-team/">Google Brain</a>, Software Engineering Intern, Summer 2018</li>
           <li><a href="https://xtract.ai/">Xtract AI</a>, Research Intern, Summer 2017</li>
           <li><a href="https://www.itg.com/">Investment Technology Group</a>, Analyst, 2013&ndash;2014</li>
