--- a/index.html
+++ b/index.html
@@ -443,18 +443,22 @@
             <br>
             <a href="#">Bo&nbsp;Chang</a>,
             <a href="https://scholar.google.com/citations?user=yRSzNv0AAAAJ">Harry&nbsp;Joe</a>
-            <br> Journal of Applied Statistics, to appear.
+            <br> Journal of Applied Statistics 47(9): 1587&ndash;1615, 2020.
             <br>
             [<a href="https://doi.org/10.1080/02664763.2019.1685080">Journal</a>]
-            [<a data-toggle="collapse" href="#chang2019copula">BibTeX</a>]
+            [<a data-toggle="collapse" href="#chang2020copula">BibTeX</a>]
             <p />
-            <div class="collapse" id="chang2019copula">
+            <div class="collapse" id="chang2020copula">
               <code>
-                @article{chang2019copula,
+                @article{chang2020copula,
                 <br>&nbsp; title = {Copula diagnostics for asymmetries and conditional dependence},
                 <br>&nbsp; author={Chang, Bo and Joe, Harry},
-                <br>&nbsp; journal = {Journal of Applied Statistics},
-                <br>&nbsp; year={2019}
+                <br>&nbsp; journal={Journal of Applied Statistics},
+                <br>&nbsp; volume={47},
+                <br>&nbsp; number={9},
+                <br>&nbsp; pages={1587--1615},
+                <br>&nbsp; year={2020},
+                <br>&nbsp; publisher={Taylor & Francis}
                 <br>}
               </code>
             </div>
