--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="UBC, statistics, machine learning, deep learning, neural networks, research" />
-  <meta name="description" content="I'm a machine learning researcher at Borealis AI, based in Toronto, Canada." />
+  <meta name="description" content="I am a software engineer at Google Brain, based in Toronto, Canada. Prior to that, I was a machine learning researcher at Borealis AI. I finished my Ph.D. in statistics at the University of British Columbia." />
   <link rel="icon" type="image/png" href="dice-16x16.png" sizes="16x16">
   <link rel="icon" type="image/png" href="dice-32x32.png" sizes="32x32">
   <title>Bo Chang</title>
