--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
           <li>
             <b>Dynamical Isometry and a Mean Field Theory of LSTMs and GRUs </b>
             <br>
-            <a href="#">Dar&nbsp;Gilboa</a>,
+            <a href="https://scholar.google.com/citations?user=L_BI2KkAAAAJ">Dar&nbsp;Gilboa</a>,
             <a href="#">Bo&nbsp;Chang</a>,
             <a href="https://scholar.google.com/citations?user=kR7DersAAAAJ">Minmin&nbsp;Chen</a>,
             <a href="https://scholar.google.com/citations?user=Xz4RAJkAAAAJ">Greg&nbsp;Yang</a>,
