--- a/index.html
+++ b/index.html
@@ -125,9 +125,10 @@
             <a href="https://scholar.google.com/citations?user=x2wyjkAAAAAJ">Marcus&nbsp;A.&nbsp;Brubaker</a>,
             <a href="https://scholar.google.com/citations?user=Bl9FSL0AAAAJ">Greg&nbsp;Mori</a>,
             <a href="https://scholar.google.com/citations?user=DM49PecAAAAJ">Andreas&nbsp;Lehrmann</a>
-            <br> Preprint, 2020.
+            <br> INNF+ Workshop at ICML, 2020 (oral).
             <br>
             [<a href="https://arxiv.org/abs/2002.10516">arXiv</a>]
+            [<a href="https://slideslive.com/38930931/modeling-continuous-stochastic-processes-with-dynamic-normalizing-flows">INNF+ video</a>]            
             [<a data-toggle="collapse" href="#deng2020modeling">BibTeX</a>]
             <p />
             <div class="collapse" id="deng2020modeling">
