--- a/index.html
+++ b/index.html
@@ -118,6 +118,30 @@
         <h3>Machine Learning</h3>
         <ul>
           <li>
+            <b>CopulaGNN: Towards Integrating Representational and Correlational Roles of Graphs in Graph Neural Networks </b>
+            <br>
+            <a href="https://scholar.google.com/citations?user=Z9X2A1MAAAAJ">Jiaqi&nbsp;Ma</a>,
+            <a href="#">Bo&nbsp;Chang</a>,
+            <a href="#">Xuefei&nbsp;Zhang</a>,
+            <a href="https://scholar.google.com/citations?user=zr22WkQAAAAJ">Qiaozhu&nbsp;Mei</a>
+            <br> Preprint, 2020.
+            <br>
+            [<a href="https://arxiv.org/abs/2010.02089">arXiv</a>]
+            [<a data-toggle="collapse" href="#ma2020copulagnn">BibTeX</a>]
+            <p />
+            <div class="collapse" id="ma2020copulagnn">
+              <code>
+                @article{ma2020copulagnn,
+                <br>&nbsp; title={CopulaGNN: Towards Integrating Representational and Correlational Roles of Graphs in Graph Neural Networks},
+                <br>&nbsp; author={Ma, Jiaqi and Chang, Bo and Zhang, Xuefei and Mei, Qiaozhu},
+                <br>&nbsp; journal={arXiv preprint arXiv:2010.02089},
+                <br>&nbsp; year={2020}
+                <br>}
+              </code>
+            </div>
+            <p />
+          </li>
+          <li>
             <b>Modeling Continuous Stochastic Processes with Dynamic Normalizing Flows </b>
             <br>
             <a href="https://scholar.google.com/citations?user=JlmzaGsAAAAJ">Ruizhi&nbsp;Deng</a>,
@@ -126,6 +150,7 @@
             <a href="https://scholar.google.com/citations?user=Bl9FSL0AAAAJ">Greg&nbsp;Mori</a>,
             <a href="https://scholar.google.com/citations?user=DM49PecAAAAJ">Andreas&nbsp;Lehrmann</a>
             <br> INNF+ Workshop at ICML, 2020 (oral).
+            <br> Advances in Neural Information Processing Systems (NeurIPS), 2020.
             <br>
             [<a href="https://arxiv.org/abs/2002.10516">arXiv</a>]
             [<a href="https://slideslive.com/38930931/modeling-continuous-stochastic-processes-with-dynamic-normalizing-flows">INNF+ video</a>]            
