--- a/index.html
+++ b/index.html
@@ -149,19 +149,18 @@
             <a href="https://scholar.google.com/citations?user=x2wyjkAAAAAJ">Marcus&nbsp;A.&nbsp;Brubaker</a>,
             <a href="https://scholar.google.com/citations?user=Bl9FSL0AAAAJ">Greg&nbsp;Mori</a>,
             <a href="https://scholar.google.com/citations?user=DM49PecAAAAJ">Andreas&nbsp;Lehrmann</a>
-            <br> INNF+ Workshop at ICML, 2020 (oral).
             <br> Advances in Neural Information Processing Systems (NeurIPS), 2020.
             <br>
             [<a href="https://arxiv.org/abs/2002.10516">arXiv</a>]
-            [<a href="https://slideslive.com/38930931/modeling-continuous-stochastic-processes-with-dynamic-normalizing-flows">INNF+ video</a>]            
+            [<a href="https://papers.nips.cc/paper/2020/hash/58c54802a9fb9526cd0923353a34a7ae-Abstract.html">Proceedings</a>]            
             [<a data-toggle="collapse" href="#deng2020modeling">BibTeX</a>]
             <p />
             <div class="collapse" id="deng2020modeling">
               <code>
-                @article{deng2020modeling,
+                @inproceedings{deng2020modeling,
                 <br>&nbsp; title={Modeling Continuous Stochastic Processes with Dynamic Normalizing Flows},
                 <br>&nbsp; author={Deng, Ruizhi and Chang, Bo and Brubaker, Marcus A and Mori, Greg and Lehrmann, Andreas},
-                <br>&nbsp; journal={arXiv preprint arXiv:2002.10516},
+                <br>&nbsp; booktitle = {Advances in Neural Information Processing Systems},
                 <br>&nbsp; year={2020}
                 <br>}
               </code>
