--- a/index.html
+++ b/index.html
@@ -115,6 +115,34 @@
         </ul>
       </div>
       <div class="tab-pane fade" id="publications">
+        <h3>Recommender Systems</h3>
+        <ul>
+          <li>
+            <b>User Response Models to Improve a REINFORCE Recommender System </b>
+            <br>
+            <a href="https://scholar.google.com/citations?user=kR7DersAAAAJ">Minmin&nbsp;Chen</a>,
+            <a href="#">Bo&nbsp;Chang</a>,
+            <a href="https://scholar.google.com/citations?user=vKW915YAAAAJ">Can&nbsp;Xu</a>,
+            <a href="https://scholar.google.com/citations?user=VuWl-KUAAAAJ">Ed&nbsp;H.&nbsp;Chi</a>
+            <br> ACM International Conference on Web Search and Data Mining (WSDM), 2021.
+            <br>
+            [<a href="https://doi.org/10.1145/3437963.3441764">Proceedings</a>]            
+            [<a data-toggle="collapse" href="#chen2021user">BibTeX</a>]
+            <p />
+            <div class="collapse" id="chen2021user">
+              <code>
+                @inproceedings{chen2021user,
+                <br>&nbsp; title={User Response Models to Improve a REINFORCE Recommender System},
+                <br>&nbsp; author={Chen, Minmin and Chang, Bo and Xu, Can and Chi, Ed H},
+                <br>&nbsp; booktitle={Proceedings of the 14th ACM International Conference on Web Search and Data Mining},
+                <br>&nbsp; pages={121--129},
+                <br>&nbsp; year={2021}
+                <br>}
+              </code>
+            </div>
+            <p />
+          </li>
+        </ul>          
         <h3>Machine Learning</h3>
         <ul>
           <li>
@@ -122,20 +150,22 @@
             <br>
             <a href="https://scholar.google.com/citations?user=Z9X2A1MAAAAJ">Jiaqi&nbsp;Ma</a>,
             <a href="#">Bo&nbsp;Chang</a>,
-            <a href="#">Xuefei&nbsp;Zhang</a>,
+            <a href="https://scholar.google.com/citations?user=WT20ymkAAAAJ">Xuefei&nbsp;Zhang</a>,
             <a href="https://scholar.google.com/citations?user=zr22WkQAAAAJ">Qiaozhu&nbsp;Mei</a>
-            <br> Preprint, 2020.
+            <br> International Conference on Learning Representations (ICLR), 2021.
             <br>
             [<a href="https://arxiv.org/abs/2010.02089">arXiv</a>]
-            [<a data-toggle="collapse" href="#ma2020copulagnn">BibTeX</a>]
+            [<a href="https://openreview.net/forum?id=XI-OJ5yyse">OpenReview</a>]            
+            [<a data-toggle="collapse" href="#ma2021copulagnn">BibTeX</a>]
             <p />
-            <div class="collapse" id="ma2020copulagnn">
+            <div class="collapse" id="ma2021copulagnn">
               <code>
-                @article{ma2020copulagnn,
-                <br>&nbsp; title={CopulaGNN: Towards Integrating Representational and Correlational Roles of Graphs in Graph Neural Networks},
+                @inproceedings{ma2021copulagnn,
+                <br>&nbsp; title={Copula{GNN}: Towards Integrating Representational and Correlational Roles of Graphs in Graph Neural Networks},
                 <br>&nbsp; author={Ma, Jiaqi and Chang, Bo and Zhang, Xuefei and Mei, Qiaozhu},
-                <br>&nbsp; journal={arXiv preprint arXiv:2010.02089},
-                <br>&nbsp; year={2020}
+                <br>&nbsp; booktitle={International Conference on Learning Representations},
+                <br>&nbsp; year={2021},
+                <br>&nbsp; url={https://openreview.net/forum?id=XI-OJ5yyse}
                 <br>}
               </code>
             </div>
@@ -463,6 +493,29 @@
         </ul>
         <h3>Statistics</h3>
         <ul>
+          <li>
+            <b>Vine Regression with Bayes Nets: A Critical Comparison with Traditional Approaches Based on a Case Study on the Effects of Breastfeeding on IQ </b>
+            <br>
+            <a href="https://scholar.google.com/citations?user=y6E9TycAAAAJ">Roger&nbsp;M.&nbsp;Cooke</a>,
+            <a href="https://scholar.google.com/citations?user=yRSzNv0AAAAJ">Harry&nbsp;Joe</a>,
+            <a href="#">Bo&nbsp;Chang</a>
+            <br> Risk Analysis, 2021.
+            <br>
+            [<a href="https://doi.org/10.1111/risa.13695">Journal</a>]
+            [<a data-toggle="collapse" href="#cooke2021vine">BibTeX</a>]
+            <p />
+            <div class="collapse" id="cooke2021vine">
+              <code>
+                @article{cooke2021vine,
+                <br>&nbsp; title={Vine Regression with Bayes Nets: A Critical Comparison with Traditional Approaches Based on a Case Study on the Effects of Breastfeeding on IQ},
+                <br>&nbsp; author={Cooke, Roger M and Joe, Harry and Chang, Bo},
+                <br>&nbsp; journal={Risk Analysis},
+                <br>&nbsp; publisher={Wiley Online Library}
+                <br>}
+              </code>
+            </div>
+            <p />
+          </li>        	
           <li>
             <b>Copula Diagnostics for Asymmetries and Conditional Dependence </b>
             <br>
