--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <h3></h3>
         <table>
           <tr>
-            <td width="40%"><img src="pic.jpg" class="img-responsive" width="90%"></td>
+            <td align="center" width="40%"><img src="pic.jpg" class="img-responsive" width="80%"></td>
             <td>
               I am a software engineer at <a href="https://ai.google/brain-team/">Google Brain</a>, based in Toronto, Canada.
               Prior to that, I was a machine learning researcher at
