--- a/index.html
+++ b/index.html
@@ -118,6 +118,61 @@
         <h3>Recommender Systems</h3>
         <ul>
           <li>
+            <b>Recency Dropout for Recurrent Recommender Systems </b>
+            <br>
+            <a href="#">Bo&nbsp;Chang</a>,            
+            <a href="https://scholar.google.com/citations?user=vKW915YAAAAJ">Can&nbsp;Xu</a>,
+            <a href="https://scholar.google.com/citations?user=nmGt9hQAAAAJ">Matthieu&nbsp;Lê</a>,
+            <a href="https://scholar.google.com/citations?user=TwchwSoAAAAJ">Jingchen&nbsp;Feng</a>,
+            <a href="https://scholar.google.com/citations?user=FIQE7v0AAAAJ">Ya&nbsp;Le</a>,
+            <a href="#">Sriraj&nbsp;Badam</a>,
+            <a href="https://scholar.google.com/citations?user=VuWl-KUAAAAJ">Ed&nbsp;H.&nbsp;Chi</a>,
+            <a href="https://scholar.google.com/citations?user=kR7DersAAAAJ">Minmin&nbsp;Chen</a>
+            <br> Preprint, 2022.
+            <br>
+            [<a href="https://arxiv.org/abs/2201.11016">arXiv</a>]
+            [<a data-toggle="collapse" href="#chang2022recency">BibTeX</a>]
+            <p />
+            <div class="collapse" id="chang2022recency">
+              <code>
+                @article{chang2022recency,
+                <br>&nbsp; title={Recency Dropout for Recurrent Recommender Systems},
+                <br>&nbsp; author={Chang, Bo and Xu, Can and L{\^e}, Matthieu and Feng, Jingchen and Le, Ya and Badam, Sriraj and Chi, Ed and Chen, Minmin},
+                <br>&nbsp; journal={arXiv preprint arXiv:2201.11016},
+                <br>&nbsp; year={2022}
+                <br>}
+              </code>
+            </div>
+            <p />
+          </li>          
+          <li>
+            <b>Learning to Augment for Casual User Recommendation </b>
+            <br>
+            <a href="https://scholar.google.com/citations?user=vPnJ6KMAAAAJ">Jianling&nbsp;Wang</a>,
+            <a href="https://scholar.google.com/citations?user=FIQE7v0AAAAJ">Ya&nbsp;Le</a>,
+            <a href="#">Bo&nbsp;Chang</a>,            
+            <a href="https://scholar.google.com/citations?user=s42s76IAAAAJ">Yuyan&nbsp;Wang</a>,
+            <a href="https://scholar.google.com/citations?user=VuWl-KUAAAAJ">Ed&nbsp;H.&nbsp;Chi</a>,
+            <a href="https://scholar.google.com/citations?user=kR7DersAAAAJ">Minmin&nbsp;Chen</a>
+            <br> ACM Web Conference (WWW), 2022.
+            <br>
+            [<a href="https://dl.acm.org/doi/abs/10.1145/3485447.3512147">Proceedings</a>]            
+            [<a data-toggle="collapse" href="#wang2022learning">BibTeX</a>]
+            <p />
+            <div class="collapse" id="wang2022learning">
+              <code>
+                @inproceedings{wang2022learning,
+                <br>&nbsp; title={Learning to Augment for Casual User Recommendation},
+                <br>&nbsp; author={Wang, Jianling and Le, Ya and Chang, Bo and Wang, Yuyan and Chi, Ed H and Chen, Minmin},
+                <br>&nbsp; booktitle={Proceedings of the ACM Web Conference 2022},
+                <br>&nbsp; pages={2183--2194},
+                <br>&nbsp; year={2022}
+                <br>}
+              </code>
+            </div>
+            <p />
+          </li>        
+          <li>
             <b>User Response Models to Improve a REINFORCE Recommender System </b>
             <br>
             <a href="https://scholar.google.com/citations?user=kR7DersAAAAJ">Minmin&nbsp;Chen</a>,
@@ -145,6 +200,31 @@
         </ul>          
         <h3>Machine Learning</h3>
         <ul>
+          <li>
+            <b>Convolutional Neural Networks Combined with Runge–Kutta Methods </b>
+            <br>
+            <a href="https://scholar.google.com/citations?user=i1Qj3CoAAAAJ">Mai&nbsp;Zhu</a>,
+            <a href="#">Bo&nbsp;Chang</a>,
+            <a href="https://scholar.google.com/citations?user=xq76xEMAAAAJ">Chong&nbsp;Fu</a>
+            <br> Neural Computing and Applications, 2022.
+            <br>
+            [<a href="https://arxiv.org/abs/1802.08831">arXiv</a>]
+            [<a href="https://doi.org/10.1007/s00521-022-07785-2">Journal</a>]            
+            [<a data-toggle="collapse" href="#zhu2022convolutional">BibTeX</a>]
+            <p />
+            <div class="collapse" id="zhu2022convolutional">
+              <code>
+                @article{zhu2022convolutional,
+                <br>&nbsp; title={Convolutional neural networks combined with {R}unge--{K}utta methods},
+                <br>&nbsp; author={Zhu, Mai and Chang, Bo and Fu, Chong},
+                <br>&nbsp; journal={Neural Computing and Applications},
+                <br>&nbsp; year={2022},
+                <br>&nbsp; publisher={Springer}
+                <br>}
+              </code>
+            </div>
+            <p />
+          </li>          
           <li>
             <b>CopulaGNN: Towards Integrating Representational and Correlational Roles of Graphs in Graph Neural Networks </b>
             <br>
@@ -190,7 +270,7 @@
                 @inproceedings{deng2020modeling,
                 <br>&nbsp; title={Modeling Continuous Stochastic Processes with Dynamic Normalizing Flows},
                 <br>&nbsp; author={Deng, Ruizhi and Chang, Bo and Brubaker, Marcus A and Mori, Greg and Lehrmann, Andreas},
-                <br>&nbsp; booktitle = {Advances in Neural Information Processing Systems},
+                <br>&nbsp; booktitle={Advances in Neural Information Processing Systems},
                 <br>&nbsp; year={2020}
                 <br>}
               </code>
@@ -323,29 +403,6 @@
                 <br>&nbsp; author={Gilboa, Dar and Chang, Bo and Chen, Minmin and Yang, Greg and Schoenholz, Samuel S and Chi, Ed H and Pennington, Jeffrey},
                 <br>&nbsp; journal={arXiv preprint arXiv:1901.08987},
                 <br>&nbsp; year={2019}
-                <br>}
-              </code>
-            </div>
-            <p />
-          </li>
-          <li>
-            <b>Convolutional Neural Networks Combined with Runge–Kutta Methods </b>
-            <br>
-            <a href="https://scholar.google.com/citations?user=i1Qj3CoAAAAJ">Mai&nbsp;Zhu</a>,
-            <a href="#">Bo&nbsp;Chang</a>,
-            <a href="https://scholar.google.com/citations?user=xq76xEMAAAAJ">Chong&nbsp;Fu</a>
-            <br> Preprint, 2018.
-            <br>
-            [<a href="https://arxiv.org/abs/1802.08831">arXiv</a>]
-            [<a data-toggle="collapse" href="#zhu2018convolutional">BibTeX</a>]
-            <p />
-            <div class="collapse" id="zhu2018convolutional">
-              <code>
-                @article{zhu2018convolutional,
-                <br>&nbsp; title={Convolutional neural networks combined with {R}unge-{K}utta methods},
-                <br>&nbsp; author={Zhu, Mai and Chang, Bo and Fu, Chong},
-                <br>&nbsp; journal={arXiv preprint arXiv:1802.08831},
-                <br>&nbsp; year={2018}
                 <br>}
               </code>
             </div>
@@ -499,17 +556,21 @@
             <a href="https://scholar.google.com/citations?user=y6E9TycAAAAJ">Roger&nbsp;M.&nbsp;Cooke</a>,
             <a href="https://scholar.google.com/citations?user=yRSzNv0AAAAJ">Harry&nbsp;Joe</a>,
             <a href="#">Bo&nbsp;Chang</a>
-            <br> Risk Analysis, 2021.
+            <br> Risk Analysis, 42(6), 1294&ndash;1305, 2022.
             <br>
             [<a href="https://doi.org/10.1111/risa.13695">Journal</a>]
-            [<a data-toggle="collapse" href="#cooke2021vine">BibTeX</a>]
+            [<a data-toggle="collapse" href="#cooke2022vine">BibTeX</a>]
             <p />
-            <div class="collapse" id="cooke2021vine">
+            <div class="collapse" id="cooke2022vine">
               <code>
-                @article{cooke2021vine,
+                @article{cooke2022vine,
                 <br>&nbsp; title={Vine Regression with Bayes Nets: A Critical Comparison with Traditional Approaches Based on a Case Study on the Effects of Breastfeeding on IQ},
                 <br>&nbsp; author={Cooke, Roger M and Joe, Harry and Chang, Bo},
                 <br>&nbsp; journal={Risk Analysis},
+                <br>&nbsp; volume = {42},
+                <br>&nbsp; number = {6},
+                <br>&nbsp; pages = {1294-1305},
+                <br>&nbsp; year = {2022},
                 <br>&nbsp; publisher={Wiley Online Library}
                 <br>}
               </code>
