--- a/index.html
+++ b/index.html
@@ -118,6 +118,32 @@
         <h3>Recommender Systems</h3>
         <ul>
           <li>
+            <b>Latent User Intent Modeling for Sequential Recommenders </b>
+            <br>
+            <a href="#">Bo&nbsp;Chang</a>,            
+            <a href="https://scholar.google.com/citations?user=j5u5iiYAAAAJ">Alexandros&nbsp;Karatzoglou</a>,
+            <a href="https://scholar.google.com/citations?user=s42s76IAAAAJ">Yuyan&nbsp;Wang</a>,
+            <a href="https://scholar.google.com/citations?user=vKW915YAAAAJ">Can&nbsp;Xu</a>,
+            <a href="https://scholar.google.com/citations?user=VuWl-KUAAAAJ">Ed&nbsp;H.&nbsp;Chi</a>,
+            <a href="https://scholar.google.com/citations?user=kR7DersAAAAJ">Minmin&nbsp;Chen</a>
+            <br> The Web Conference (WWW), Industry Track, 2023.
+            <br>
+            [<a href="https://arxiv.org/abs/2211.09832">arXiv</a>]
+            [<a data-toggle="collapse" href="#chang2022latent">BibTeX</a>]
+            <p />
+            <div class="collapse" id="chang2022latent">
+              <code>
+                @article{chang2022latent,
+                <br>&nbsp; title={Latent User Intent Modeling for Sequential Recommenders},
+                <br>&nbsp; author={Chang, Bo and Karatzoglou, Alexandros and Wang, Yuyan and Xu, Can and Chi, Ed H and Chen, Minmin},
+                <br>&nbsp; journal={arXiv preprint arXiv:2211.09832},
+                <br>&nbsp; year={2022}
+                <br>}
+              </code>
+            </div>
+            <p />
+          </li>
+          <li>
             <b>Recency Dropout for Recurrent Recommender Systems </b>
             <br>
             <a href="#">Bo&nbsp;Chang</a>,            
@@ -154,7 +180,7 @@
             <a href="https://scholar.google.com/citations?user=s42s76IAAAAJ">Yuyan&nbsp;Wang</a>,
             <a href="https://scholar.google.com/citations?user=VuWl-KUAAAAJ">Ed&nbsp;H.&nbsp;Chi</a>,
             <a href="https://scholar.google.com/citations?user=kR7DersAAAAJ">Minmin&nbsp;Chen</a>
-            <br> ACM Web Conference (WWW), 2022.
+            <br> The Web Conference (WWW), 2022.
             <br>
             [<a href="https://dl.acm.org/doi/abs/10.1145/3485447.3512147">Proceedings</a>]            
             [<a data-toggle="collapse" href="#wang2022learning">BibTeX</a>]
