--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     "@type": "Person",
     "name": "Bo Chang",
     "gender": "Male",
-    "Description": "Bo Chang is a software engineer at Google Brain.",
+    "Description": "Bo Chang is a software engineer at Google DeepMind.",
     "jobTitle": "Software Engineer",
     "worksFor": [{
       "@type": "Organization",
@@ -81,7 +81,7 @@
           <tr>
             <td align="center" width="40%"><img src="pic.jpg" class="img-responsive" width="80%"></td>
             <td>
-              I am a software engineer at <a href="https://ai.google/brain-team/">Google Brain</a>, based in Toronto, Canada.
+              I am a software engineer at <a href="https://www.deepmind.com/">Google DeepMind</a>, based in Toronto, Canada.
               Prior to that, I was a machine learning researcher at
               <a href="https://www.borealisai.com/en/">Borealis AI</a>. 
               I finished my Ph.D. in statistics at the <a href="https://www.ubc.ca/">University of British Columbia</a>.
@@ -118,6 +118,33 @@
         <h3>Recommender Systems</h3>
         <ul>
           <li>
+            <b>Investigating Action-Space Generalization in Reinforcement Learning for Recommendation Systems </b>
+            <br>
+            <a href="https://scholar.google.com/citations?user=9gV4DRsAAAAJ">Abhishek&nbsp;Naik</a>,            
+            <a href="#">Bo&nbsp;Chang</a>,            
+            <a href="https://scholar.google.com/citations?user=j5u5iiYAAAAJ">Alexandros&nbsp;Karatzoglou</a>,
+            <a href="https://scholar.google.com/citations?user=Gc65LRwAAAAJ">Martin&nbsp;Mladenov</a>,
+            <a href="https://scholar.google.com/citations?user=VuWl-KUAAAAJ">Ed&nbsp;H.&nbsp;Chi</a>,
+            <a href="https://scholar.google.com/citations?user=kR7DersAAAAJ">Minmin&nbsp;Chen</a>
+            <br> The Web Conference (WWW), Decision Making for Information Retrieval and Recommender Systems Workshop, 2023.
+            <br>
+            [<a href="https://doi.org/10.1145/3543873.3587661">Proceedings</a>]
+            [<a data-toggle="collapse" href="#naik2023investigating">BibTeX</a>]
+            <p />
+            <div class="collapse" id="naik2023investigating">
+              <code>
+                @inproceedings{naik2023investigating,
+                <br>&nbsp; title={Investigating Action-Space Generalization in Reinforcement Learning for Recommendation Systems},
+                <br>&nbsp; author={Naik, Abhishek and Chang, Bo and Karatzoglou, Alexandros and Mladenov, Martin and Chi, Ed H and Chen, Minmin},
+                <br>&nbsp; booktitle={Companion Proceedings of the ACM Web Conference 2023},
+                <br>&nbsp; pages={966--972},
+                <br>&nbsp; year={2023}
+                <br>}
+              </code>
+            </div>
+            <p />
+          </li>          
+          <li>
             <b>Latent User Intent Modeling for Sequential Recommenders </b>
             <br>
             <a href="#">Bo&nbsp;Chang</a>,            
@@ -129,6 +156,7 @@
             <br> The Web Conference (WWW), Industry Track, 2023.
             <br>
             [<a href="https://arxiv.org/abs/2211.09832">arXiv</a>]
+            [<a href="https://doi.org/10.1145/3543873.3584641">Proceedings</a>]
             [<a data-toggle="collapse" href="#chang2022latent">BibTeX</a>]
             <p />
             <div class="collapse" id="chang2022latent">
